# kolomon-backend

./: .gitignore  .pylintrc  README.md  alembic.TEMPLATE.ini  alembic.ini  api-design-2021-09-04.md  api_structures.json  database.py  dependencies.py  main.py  manage.py  pagination.py  pyproject.toml
.run/: Run Backend (uvicorn).run.xml  Run Kolomoni backend.run.xml  Run Kolomoni.run.xml  Run Standalone PostgreSQL.run.xml  Run Standalone Postgres Database.run.xml  Start Stari Kolomoni.run.xml
alembic/: env.py
alembic/versions/: 2968c66b6c0c_fix_user_onupdate.py  2a32a4352815_update_roles.py  358a8b1f7d49_fix_cascading_for_user_tag.py  3b81be27e52c_links_2.py  4ca18a8abef3_fix_cascading_for_user_tag_2.py  5f4dd9ce74f4_translation_state.py  78617b85fcda_fix_cascading_for_user_tag_3.py  8014a32b716c_init.py  aade61970e7a_links.py  ab6f7c321ab4_everything.py  ca3a01bab94d_add_cascade_removal.py  f8e061c471e6_rename_relation_to_relations.py
core/: configuration.py  configuration_base.py  exceptions.py  log.py  logging.py  settings.py
core/models/: dal_dependencies.py  database.py  database_queries.py  lex_model.py  main_dal.py  users_model.py
core/schemas/: lex_schema.py  message_types.py  users_schema.py
data/: configuration.TEMPLATE.toml
db/: TsVector.py
kolomon/: asgi.py  settings.py  urls.py  wsgi.py
leksikon/: admin.py  api.py  apps.py  models.py  objects.py  serializers.py  urls.py  views.py
leksikon/migrations/: 0001_initial.py  0002_auto_20210825_1859.py  0002_auto_20210909_1353.py  0003_auto_20210910_1209.py  0003_englishentry_categories.py  0004_auto_20210825_1922.py  0005_auto_20210827_1537.py  (+2 more)
lexicon/: lexicon.py  models.py
scripts/: PostgresScripts.psm1  kolomon-run.ps1  kolomoni-run.ps1  postgres-init.ps1  postgres-start-noninteractive.ps1  postgres-start.ps1  postgres-stop.ps1
tests/: database_handler.py
users/: auth.py  crud.py  models.py  schemas.py  users.py
v1/: api.py  doc_strings.py
(+49 files in other folders)
