[tool.poetry]
name = "kolomon-backend"
version = "0.1.0"
description = "Back-end for Stari kolomoni"
authors = ["Grimpy <gorupgorazd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.31"}
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
